--- a/Dunkalooza/Makefile
+++ b/Dunkalooza/Makefile
@@ -56,7 +56,7 @@ LIBS	:= -lpica -lcitro3d -lctru -lm
 # list of directories containing libraries, this must be the top level containing
 # include and lib
 #---------------------------------------------------------------------------------
-LIBDIRS	:= $(CTRULIB)
+LIBDIRS	:= $(CTRULIB) $(CURDIR)/pica_physics
 
 
 #---------------------------------------------------------------------------------
